# BookStore_Android_Application

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bookstore/bookstorecsdksibsapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/BookStoreLib/: CMakeLists.txt  HttpClient.cpp
app/src/main/cpp/BookStoreLib/include/BookStoreLib/: HttpClient.h
app/src/main/cpp/unit_tests/: HttpClientTests.cpp
app/src/main/java/com/bookstore/bookstorecsdksibsapplication/: Book.java  BookAdapter.java  BookDetailActivity.java  CurlHelper.java  MainActivity.java
app/src/main/res/layout/: activity_book_detail.xml  activity_main.xml  book_list_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bookstore/bookstorecsdksibsapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
